Fix margin on mobile

--- a/src/sass/components/_projects.scss
+++ b/src/sass/components/_projects.scss
@@ -41,15 +41,15 @@
 				flex-direction: row;
 			}
 			h2 {
-				margin-bottom: 1rem;
+				margin-bottom: 0;
 				width: 100%;
 				@include mq(medium) {
-					margin-bottom: 0;
+					margin-bottom: 2rem;
 					width: 75%;
 				}
 			}
 			p {
-				margin-bottom: 1rem;
+				margin-bottom: 2rem;
 				@include mq(medium) {
 					margin-bottom: 0;
 				}
